--- a/template.yaml
+++ b/template.yaml
@@ -9,12 +9,16 @@ Resources:
   LambdaLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
-      LayerName: ffmpeg 
+      LayerName: ffmpeg
       Description: FFMPEG for AWS Lambda
       ContentUri: build/layer
       CompatibleRuntimes:
-        - nodejs10.x
-        - python3.6
+        - nodejs18.x
+        - nodejs16.x
+        - nodejs14.x
+        - python3.9
+        - python3.8
+        - python3.7
         - ruby2.5
         - java8
         - go1.x
@@ -28,15 +32,15 @@ Outputs:
 
 Metadata:
   AWS::ServerlessRepo::Application:
-    Name: ffmpeg-lambda-layer
+    Name: !Sub ${STACK_NAME}
     Description: >
       Static build of FFmpeg/FFprobe for Amazon Linux 2,
       packaged as a Lambda layer. Bundles FFmpeg 4.1.3
     Author: Gojko Adzic
     SpdxLicenseId: GPL-2.0-or-later
     LicenseUrl: LICENSE.txt
-    ReadmeUrl: README-SAR.md 
-    Labels: ['layer', 'lambda', 'ffmpeg', 'ffprobe']
+    ReadmeUrl: README-SAR.md
+    Labels: ["layer", "lambda", "ffmpeg", "ffprobe"]
     HomePageUrl: https://github.com/serverlesspub/ffmpeg-aws-lambda-layer
     SemanticVersion: 1.0.0
     SourceCodeUrl: https://github.com/serverlesspub/ffmpeg-aws-lambda-layer
